  
  o Introduced brief.tbl(), which simply calls print(), to cope with changes to tibbles.
  
  o qqPlot() fills (shades) confidence envelopes by default, and smoothers for scatterplots fill variance (spread) envelopes by default (suggestions of Michael Friendly).
  
  o Fixed problem in infIndexPlot.influence.lme() (reported by Francis L. Huang).

Changes to Version 3.0-10

  o Fixed as error when using parameter name "(Intercept)" with deltaMethod().  
  
  o Several changes to Boot() to correct bugs, support the plinear algorithm, to correct use of weights for lm, and allow use of weights for nls.
  
  o Fix quantregLine() to work with development version 5.69 of quantreg package (following heads-up from Roger Koenker).
  
Changes to Version 3.0-9
  
  o Declare linearHypothesis.survreg() method, previously omitted from NAMESPACE (following question by Robert Dinterman); tweaks to survreg methods for linearHypothesis(), Anova(), and deltaMethod() to make them more robust.
  
  o Fix bug in hccm() when model matrix includes just one column (reported by Justin Yap).
  
  o Fix buglet in scatterplotMatrix.formula() when groups specified.
  
  o Several functions are now generic: avPlots(), ceresPlots(), crPlots(), mcPlots().
  
  o Enable spread smoothers for crPlot(), ceresPlot(), and residualPlot() (suggestion of Dave Armstrong).
  
  o Small changes to docs.

Changes to Version 3.0-8

  o Import() now defaults to stringsAsFactors=FALSE to match the default behavior of read.table() as of R 4.0.0.
  
  o New strings2factors() function to convert character variables in a data frame to factors.
  
  o Added data.frame method for S().
  
  o Fixed a bug in estimateTransform.lm() that returned the correct answer with an unneeded warning.
  
  o Fixed Anova.coxph() to handle weights properly (problem reported by Daniel Morillo Cuadrado).

Changes to Version 3.0-7

  o Fixed boxCox(), powerTransform() to work when 'car' package is not attached
  