@@ -1,4 +1,4 @@
-# last modified 2020-10-07 by J. Fox
+# last modified 2020-12-19 by J. Fox
 
 # additions for car >= 3.0-0, started 2016-12-27
 
@@ -373,6 +373,8 @@ S3method(coef, powerTransform)
 S3method(vcov, powerTransform)
 S3method(vif, default)
 S3method(vif, merMod)
+S3method(vif, polr)
+S3method(vif, svyolr)
 S3method(symbox, formula)
 S3method(symbox, default)
 # added with bcnPower
